Inconsistent rotation Shortcut vs Gizmos #76693

Closed
opened 2020-05-12 18:20:13 +02:00 by Julian Mohr · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87

Blender Version
Broken: version: 2.90 (sub 1), branch: master, commit date: 2020-05-12 11:24, hash: 94734d6454
Worked: (newest version of Blender that worked as expected)

Short description of error
The Rotation Axis differs for the gizmos and shortcuts

Exact steps for others to reproduce the error
Compare R +Z against Gizmos
2020-05-12 18-15-42.mp4

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 445.87 **Blender Version** Broken: version: 2.90 (sub 1), branch: master, commit date: 2020-05-12 11:24, hash: `94734d6454` Worked: (newest version of Blender that worked as expected) **Short description of error** The Rotation Axis differs for the gizmos and shortcuts **Exact steps for others to reproduce the error** Compare R +Z against Gizmos [2020-05-12 18-15-42.mp4](https://archive.blender.org/developer/F8531066/2020-05-12_18-15-42.mp4)
Author

Added subscriber: @Jewls

Added subscriber: @Jewls
Author

I dont know if its by design or a feature
Correct me if im wrong but thats at least unexpected behavior in my opinion.
If not dont hesitate to close this task

I dont know if its by design or a feature Correct me if im wrong but thats at least unexpected behavior in my opinion. If not dont hesitate to close this task
Author

Also in Ortho View the axis seems to switched rotation ...
2020-05-12 18-32-21.mp4

Also in Ortho View the axis seems to switched rotation ... [2020-05-12 18-32-21.mp4](https://archive.blender.org/developer/F8531098/2020-05-12_18-32-21.mp4)

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Germano Cavalcante self-assigned this 2020-05-12 19:19:33 +02:00

This issue was referenced by 94b9141c95

This issue was referenced by 94b9141c953bb4c276631bd40145f81f07304c9c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Thanks for the report.
It was really a mistake introduced in one of the last tweaks in this area.

Thanks for the report. It was really a mistake introduced in one of the last tweaks in this area.
Author

glad to discoverd this one before the release^^

glad to discoverd this one before the release^^
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76693
No description provided.