Fix T76693: Inconsistent rotation Shortcut vs Gizmos

Problem introduced in rB4deea4f4c57a